classDiagram

    %% BernsteinFromECDF
    class BernsteinFromECDF {
        <<static-final>>
        + approximateECDFWithNormalBase(ecdf, x, degree)
        + approximateECDFWithLinearBase(ecdf, degree, x, lowerSupport, upperSupport)
        + approximateECDFWithExponentialBase(ecdf, x, degree)
        + approximateEPDFWithNormalBase(ecdf, x, degree)
        + approximateEPDFWithLinearBase(ecdf, x, degree, lowerSupport upperSupport)
        + approximateEPDFWithExponentialBase(ecdf, x, degree)
    }

    class ECDF {
        <<final>>
        data : double[]
        + eval(double x)
    }

    %% BernsteinFromMonomial
    class BernsteinFromMonomial {
        <<static-final>>
    }

    class Polynomial {
        <<abstract>>
        - coefficient : double[]
        + eval(double x)
        + convolve(Polynomial poly) Polynomial
    }

    class MonomialPolynomial {
        <<final>>
    }

    class BernsteinPolynomial {
        <<final>>
        - basis : Basis
    }

    class BernsteinBasis {
        <<interface>>
        + map(double x) double
    }

    class LinearBernsteinBasis {
        <<final>>
        - lowerSupport : double
        - upperSupport : double
    }

    %% Functionality
    class PolynomialDistance {
        <<static-final>>
        + withPlot(Polynomial poly1, Polynomial poly2, double lowerBound upperBound numberOfSamples)
        + normL1(Polynomial poly1, Polynomial poly2, double lowerBound upperBound numberOfSamples)
        + normL2(Polynomial poly1, Polynomial poly2, double lowerBound upperBound numberOfSamples)
        + normLinf(Polynomial poly1, Polynomial poly2, double lowerBound upperBound numberOfSamples)
    }

    class PolynomialVisualization {
        <<static-final>>
        + visualize(String title, Polynomial poly, double lowerBound, upperBound, numbersOfPoints)
    }

    %% Relation
    Client --> BernsteinFromMonomial
    Client --> BernsteinFromECDF
    Client --> PolynomialDistance
    Client --> PolynomialVisualization
    BernsteinFromMonomial --> Polynomial
    Polynomial <|-- MonomialPolynomial
    Polynomial <|-- BernsteinPolynomial
    BernsteinPolynomial *-- BernsteinBasis
    BernsteinBasis <|-- LinearBernsteinBasis
    BernsteinFromECDF --> ECDF